--- a/eureka-server2/src/main/resources/application.properties
+++ b/eureka-server2/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 eureka.instance.appname=localhost
-
+eureka.server.enable-self-preservation=false
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 server.port=8762
